several changes to popular section very difficult and its kicking my butt will fix arrow alignment tomorrow

--- a/styles.css
+++ b/styles.css
@@ -900,3 +900,74 @@
     width: 90vw;
   }
 }
+/* Loader styles */
+#popular-loader .spinner-border.text-primary {
+  color: #b066e8 !important;
+  width: 4rem;
+  height: 4rem;
+  border: 0.3em solid currentColor;
+  border-right-color: transparent;
+}
+
+/* Carousel navigation arrows */
+.slick-prev, .slick-next {
+  font-size: 0;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  width: 45px;
+  height: 45px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.slick-prev {
+  left: -50px;
+}
+
+.slick-next {
+  right: -50px;
+}
+
+.slick-prev:before, .slick-next:before {
+  font-size: 45px;
+  color: #888;
+}
+
+/* Responsive adjustments */
+@media (max-width: 992px) {
+  .slick-prev {
+    left: -25px;
+  }
+  
+  .slick-next {
+    right: -25px;
+  }
+}
+
+@media (max-width: 768px) {
+  .slick-prev, .slick-next {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .slick-prev:before, .slick-next:before {
+    font-size: 30px;
+  }
+  
+  .slick-prev {
+    left: -15px;
+  }
+  
+  .slick-next {
+    right: -15px;
+  }
+}
+.slick-slide img {
+  display: inline-flex !important;
+  vertical-align: middle;
+  margin: 0 auto;
+  max-width: 100%;
+}
